First Usable Version!

--- a/settings.json
+++ b/settings.json
@@ -1,9 +1,6 @@
 {
 	"theme":"internal://defaultTheme.json",
+	"language":"english",
 	"last-workspaces": [
-		"C:\Users\Shinoa Hiragi\Desktop\AngelStudio\src",
-		"C:\Users\Shinoa Hiragi\Documents\Battlefield 3",
-		"C:\Users\Shinoa Hiragi\Documents\Visual Studio 2012",
-		"C:\Users\Shinoa Hiragi\Documents\Documents"
 	]
 }
