Fixed a few problems and added a light theme for the pre-release build

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
-	"theme":"internal://defaultTheme.json",
-	"language":"english",
+	"theme":"tokyoNightLight.json",
+	"language":"nihongo",
 	"last-workspaces": [
+		"C:\Users\Shinoa Hiragi\Documents\BadApuru"
 	]
 }
