Image Viewer, Icons for images and fixed settings not showing bug. also, now it accesses modules and themes from the correct folder.

--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,8 @@
 {
-	"theme":"tokyoNightLight.json",
-	"language":"nihongo",
+	"theme":"internal://tokyoNightDark.json",
+	"language":"english",
 	"last-workspaces": [
+		"C:\Users\Shinoa Hiragi\Desktop\TheShinoaFiles\Galery",
 		"C:\Users\Shinoa Hiragi\Documents\BadApuru"
 	]
 }
