brand new launcher + fixed escaping character bug from the settings file.

--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,6 @@
 	"theme":"internal://tokyoNightDark.json",
 	"language":"english",
 	"last-workspaces": [
-		"C:\Users\Shinoa Hiragi\Desktop\TheShinoaFiles\Galery",
-		"C:\Users\Shinoa Hiragi\Documents\BadApuru"
+		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/Java-Workspace/BadApple/themes"
 	]
 }
