New setting, you can now change the editor's font size.

--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,7 @@
 {
 	"theme":"internal://tokyoNightDark.json",
 	"language":"english",
+	"editor-fontsize":"156",
 	"last-workspaces": [
 		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/Java-Workspace/BadApple/themes"
 	]
