Fixes, and new Lexer!
Fixed memory usage, now Views are required to release their icons when they are closed by using View#OnRelease, and View#OnInit to load up icons.

Now Highlight Engines have an actual Lexer to work with.

and Added a few comments.

--- a/settings.json
+++ b/settings.json
@@ -1,8 +1,9 @@
 {
 	"theme":"internal://tokyoNightDark.json",
 	"language":"english",
-	"editor-fontsize":"156",
+	"editor-fontsize":"14",
 	"last-workspaces": [
+		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/LearnHAXE",
 		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/Java-Workspace/BadApple/themes"
 	]
 }
