--- a/settings.json
+++ b/settings.json
@@ -4,6 +4,7 @@
 	"terminal-emulator":"cmd",
 	"editor-fontsize":"14",
 	"last-workspaces": [
+		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles",
 		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/LearnHAXE",
 		"C:/Users/Shinoa Hiragi/Desktop/TheShinoaFiles/Projects/Java-Workspace/BadApple/themes"
 	]
